[gd_scene load_steps=9 format=3 uid="uid://cpxwq6pd1oxm5"]

[ext_resource type="Script" path="res://tutorial.gd" id="1_4t6en"]
[ext_resource type="Texture2D" uid="uid://ccnr586hsrcfq" path="res://assets/Art Folder/Tutorial Frames/tutorial1.png" id="2_mspu6"]
[ext_resource type="Texture2D" uid="uid://c6grtlqpiy3ye" path="res://assets/Art Folder/Tutorial Frames/tutorial2.png" id="3_hsnbg"]
[ext_resource type="Texture2D" uid="uid://crn4pxttw6v6c" path="res://assets/Art Folder/Tutorial Frames/tutorial3.png" id="4_84agd"]
[ext_resource type="Texture2D" uid="uid://ckv7yaa1pqtjf" path="res://assets/Art Folder/Tutorial Frames/tutorial4.png" id="5_pyhxa"]
[ext_resource type="Texture2D" uid="uid://chc84fra4yo7k" path="res://assets/Art Folder/backgrounds/bg-blur.png" id="6_pcnqx"]
[ext_resource type="Texture2D" uid="uid://jr66bhn3gcxa" path="res://assets/Art Folder/Tutorial Frames/tutorial_arrow.png" id="7_2noqi"]
[ext_resource type="AudioStream" uid="uid://iroh2gmajqys" path="res://assets/sound/paper_crinkle.mp3" id="8_en6ht"]

[node name="Root2" type="Node2D"]
script = ExtResource("1_4t6en")
textures = Array[CompressedTexture2D]([ExtResource("2_mspu6"), ExtResource("3_hsnbg"), ExtResource("4_84agd"), ExtResource("5_pyhxa")])
goto_scene_on_end = "renovated"

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 53.0
offset_top = 38.0
offset_right = 1205.0
offset_bottom = 686.0
scale = Vector2(0.9, 0.9)
texture = ExtResource("5_pyhxa")
expand_mode = 2

[node name="gameplay_blurred" type="TextureRect" parent="."]
z_index = -1
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.299991, 0.298927)
texture = ExtResource("6_pcnqx")

[node name="start_button" type="Button" parent="."]
visible = false
z_index = -2
offset_left = 768.0
offset_top = 472.0
offset_right = 920.0
offset_bottom = 600.0

[node name="next" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 999.0
offset_top = 527.0
offset_right = 1080.0
offset_bottom = 587.0
text = "Next"

[node name="TextureRect" type="TextureRect" parent="next"]
layout_mode = 0
offset_right = 332.0
offset_bottom = 234.0
scale = Vector2(0.248447, 0.259587)
texture = ExtResource("7_2noqi")

[node name="back" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 65.0
offset_top = 524.0
offset_right = 162.0
offset_bottom = 595.0
scale = Vector2(0.883226, 0.838815)
text = "Back"

[node name="TextureRect2" type="TextureRect" parent="back"]
layout_mode = 0
offset_left = 2.26443
offset_top = -2.3844
offset_right = 334.264
offset_bottom = 231.616
scale = Vector2(0.284883, 0.312528)
texture = ExtResource("7_2noqi")
flip_h = true

[node name="button_press" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_en6ht")
pitch_scale = 2.0

[connection signal="button_down" from="start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
